ticketing-was/ticketing-was-deployment-final.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-was-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-was
  template:
    metadata:
      labels:
        app: ticketing-was
    spec:
      containers:
      - name: ticketing-was
        image: kingking4105/ticketing-was:latest
        imagePullPolicy: Always
        workingDir: /app
        ports:
        - containerPort: 8000
