ticketing-was/ticket-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-backend-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ticket-backend
  template:
    metadata:
      labels:
        app: ticket-backend
    spec:
      containers:
      - name: python-backend
        # 💡 새로 만든 1.06 버전 명시 (경로 문제가 해결된 버전)
        image: kingking4105/ticketing-was:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000 # 파이썬 서버 포트
        resources:
          requests:
            cpu: "100m"      # HPA 계산을 위한 기준점 (꼭 필요!)
            memory: "128Mi"
          limits:
            cpu: "500m"      # 최대 사용량 제한
            memory: "256Mi"           
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-backend-svc
spec:
  type: ClusterIP # 클러스터 내부에서만 안전하게 통신
  selector:
    app: ticket-backend
  ports:
  - port: 8000
    targetPort: 8000
