ticketing-was/ticketing-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-was-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ticketing-was
  template:
    metadata:
      labels:
        app: ticketing-was
    spec:
      containers:
      - name: ticketing-was
        image: kingking4105/ticketing-was:latest
        imagePullPolicy: Always
        workingDir: /app/data
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: was-storage
          mountPath: /app/data
      volumes:
      - name: was-storage  # 수정된 부분
        persistentVolumeClaim:
          claimName: was-nfs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-was-service
spec:
  type: LoadBalancer
  selector:
    app: ticketing-was
  ports:
  - port: 80
    targetPort: 8000
